Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.2.0 Beta3
-
None
Description
Steps to reproduce
1.) Open qt 6.2.0 multimediawidgets.pro sample
2.) Configure for Qt_6_2_0_Clang_armeabi_v7a
3.) Build and run
Application Stops because of
W System.err: java.lang.NoSuchMethodError: no non-static method "Lorg/qtproject/qt/android/multimedia/QtAndroidMediaPlayer;.<init>()V"
And
E AndroidRuntime: FATAL EXCEPTION: qtMainLoopThread
E AndroidRuntime: Process: org.qtproject.example.camera, PID: 30583
E AndroidRuntime: java.lang.UnsatisfiedLinkError: JNI_ERR returned from JNI_OnLoad in "/data/app/org.qtproject.example.camera-1/lib/arm/libQt6Multimedia_armeabi-v7a.so"
Attachments
Issue Links
- is duplicated by
-
QTBUG-98325 QtAudioDeviceManager does not implement setActivity method
-
- Closed
-
- relates to
-
QTBUG-92952 Improve public JNI API
-
- Open
-